# swiss-financial-health-advisor

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: recommendations.csv  scored_users.csv  segment_centroids.csv  synthetic_transactions.csv  user_monthly_features.csv
docs/: linkedin-post.md
notebooks/: 01_exploratory_analysis_and_model_validation.ipynb
scripts/: build_demo_data.py
src/swiss_financial_health/: __init__.py  clustering.py  data_generation.py  features.py  recommendations.py  scoring.py
tests/: test_pipeline.py
